--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.18.2",
     "expo": "~49.0.11",
+    "expo-app-loading": "^2.1.1",
     "expo-status-bar": "~1.6.0",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
